tests/03-typecheck/09-deref.ref
tests/03-typecheck/09-deref.stack:2:5, Semantic error: func int.* has non matching args, expected (ptr) but got (int)
