tests/03-typecheck/09-deref.stack
func deref_test (int) (int) in
    int.*
end
